<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/profile_picture_image_view"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/images"/>

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15sp"
        android:fontFamily="roboto"
        android:text="@string/username"
        android:textColor="@color/dark_purple"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15sp"
        android:fontFamily="roboto"
        android:text="@string/email"
        android:textColor="@color/dark_purple"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/phone_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15sp"
        android:fontFamily="roboto"
        android:text="@string/phone"
        android:textColor="@color/dark_purple"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_profile_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="12sp"
        android:text="@string/edit_profile"
        />

</LinearLayout>