<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_sky_blue"
    android:paddingLeft="40dp"
    android:paddingRight="40dp">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_centerInParent="true"
        android:background="@drawable/round_background"
        android:orientation="vertical"
        android:padding="14dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/com_facebook_button_send_background_color"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_white_rectangle"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_user" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"

                android:layout_marginRight="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/username"
                android:inputType="text"
                android:nextFocusDown="@+id/password_et"
                android:nextFocusForward="@+id/password_et" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_white_rectangle"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_lock"
                android:contentDescription="@string/pass" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/signin_btn"
                android:nextFocusForward="@+id/signin_btn" />

        </LinearLayout>


        <Button
            android:id="@+id/signin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:fontFamily="casual"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/dark_sky_blue"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/forgot_password_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="end"
            android:text="@string/forgot_pass"
            android:textColor="@color/com_facebook_button_background_color_selected"
            android:textSize="12sp" />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignTop="@+id/layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-35dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"
        app:civ_border_color="@color/com_facebook_button_background_color_selected"
        app:civ_border_width="3dp"
        app:civ_circle_background_color="@color/com_facebook_button_background_color_selected" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:background="@color/dark_purple" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        android:padding="18dp">


        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_signIn_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/account"
            android:textColor="@color/com_facebook_button_background_color_disabled"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/signup_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/register"
            android:textColor="@color/com_facebook_button_background_color_disabled"
            android:textSize="12sp" />


    </LinearLayout>

</RelativeLayout>